==================== 2.24.0.1 ====================

2008-09-02  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_job_schedule): properly
	initialize the callback data (bug #550263)

2008-08-16  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gtk_theme_info_missing_engine): don't leak
	the theme engine path

2008-08-16  Jens Granseuer  <jensgr@gmx.net>

	Keep track of hidden themes, too, so that e.g. we don't erroneously
	show "GTK theme missing" when a metatheme references a hidden GTK
	theme (part of bug #547301)

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(read_icon_theme), (read_cursor_theme): don't skip hidden themes,
	initialize the hidden property
	(gnome_theme_info_find_all_helper): only return non-hidden themes
	* gnome-theme-info.h: add hidden property to all theme types

2008-08-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): make sure we have a
	notification theme before trying to save it (bug #547448)

2008-08-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): if the metatheme loaded
	doesn't define a notification theme don't set it to "standard" (bug
	#546036)

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_job_destroy),
	(file_transfer_job_schedule), (file_transfer_dialog_copy_async):
	make the file transfer dialog work with GFiles instead gchar paths
	internally

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* capplet-util.c (directory_delete_recursive),
	(capplet_file_delete_recursive):
	* capplet-util.h: Move directory deletion helper function
	from the appearance capplet into a common directory

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 533611 - add notification themes to the metatheme format

	* gnome-theme-apply.c: When applying a metatheme, apply
	the notification theme, too.

	* gnome-theme-info.h: Add a notification_theme_name field