@@ -1,3 +1,8 @@
+2008-09-29  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-info.c: (read_icon_theme): use translated names for
+	icon themes if available (bug #554272)
+
 ==================== 2.24.0.1 ====================
 
 2008-09-02  Jens Granseuer  <jensgr@gmx.net>
